--- a/index.html
+++ b/index.html
@@ -100,51 +100,44 @@
 		</div>
 <div class="row message">
   <div class="col-md-12">
-    <p>Today is...</p>
-    <p>a little more special than other days</p>
-    <p>because it reminds me of you</p>
-    <p>and the beautiful time we shared</p>
-    <p>time that passed too quickly</p>
 
-    <p><strong>but still lives in my heart</strong></p>
+    <p>Every moment with you feels like a quiet blessing ✨💫</p>
+    <p>a precious gift wrapped in warmth, laughter, and light 🎁💛😄</p>
 
-    <p>Do you know..?</p>
-    <p>some moments stay forever</p>
-    <p>no matter how far we go</p>
-    <p>or how much time passes</p>
+    <p>On your birthday 🎂🎉</p>
+    <p>I wish for you a world filled with love ❤️🌍</p>
+    <p>happiness 😊🌸</p>
+    <p>and endless possibilities ✨🚀</p>
 
-    <p>That's why today</p>
-    <p>I just want to celebrate you</p>
-    <p>and the memories we made</p>
+    <p>You have a way of brightening every space you enter 🌟🏡</p>
+    <p>as if the day itself smiles a little more ☀️🙂</p>
 
-    <p>I’m truly grateful</p>
-    <p>for every laugh we shared</p>
-    <p>for every conversation</p>
-    <p>and for the comfort of your presence</p>
+    <p>You are like a shot of espresso ☕⚡</p>
+    <p>full of energy 🔥</p>
+    <p>enthusiasm 😄✨</p>
+    <p>and life 💃🌈</p>
 
-    <p>I miss those days</p>
-    <p>I miss that time</p>
-    <p>and honestly...</p>
-    <p>I miss you</p>
+    <p>And at the same time 💫</p>
+    <p>you feel like being bathed in sunshine ☀️🌼</p>
+    <p>warm 🤍</p>
+    <p>comforting 🤗</p>
+    <p>and quietly uplifting 🌤️💖</p>
 
-    <p>I wish you all the happiness</p>
-    <p>May your life be peaceful</p>
-    <p>May your dreams find their way</p>
+    <p>Your sense of play 🎈😜</p>
+    <p>your fun spirit 🎉✨</p>
+    <p>and your beautiful energy 💃💫</p>
+    <p>make even the simplest moments exciting 🌟🥰</p>
 
-    <p>Remember</p>
-    <p>you deserve the best</p>
-    <p>you have a beautiful soul</p>
+    <p>Thank you for being such a beautiful presence 💐💛</p>
+    <p>a light that makes life feel a little more special ✨🌸</p>
 
-    <p>Keep smiling</p>
-    <p>keep being you</p>
-    <p>and never stop believing</p>
+    <p>Wishing you peace 🕊️</p>
+    <p>joy 😄🎶</p>
+    <p>love ❤️💖</p>
+    <p>and moments worth holding close 🤍📸</p>
 
-    <p>Lastly...</p>
-    <p>I want to say this from my heart</p>
-    <p>I’m thankful for you</p>
-    <p>and for the time we spent together</p>
+    <p><strong>Happy Birthday, Sonali 🎂💐✨💖</strong></p>
 
-    <p>a very happy birthday, Sonali</p>
   </div>
 </div>
 		<div class="navbar navbar-fixed-bottom">
