--- a/index.html
+++ b/index.html
@@ -101,42 +101,29 @@
 <div class="row message">
   <div class="col-md-12">
 
-    <p>Every moment with you feels like a quiet blessing ✨💫</p>
-    <p>a precious gift wrapped in warmth, laughter, and light 🎁💛😄</p>
+    <p>Every moment with you feels like poetry written by time itself,</p>
+    <p>gentle, unexpected, and quietly beautiful 🌙✨</p>
 
-    <p>On your birthday 🎂🎉</p>
-    <p>I wish for you a world filled with love ❤️🌍</p>
-    <p>happiness 😊🌸</p>
-    <p>and endless possibilities ✨🚀</p>
+    <p>You arrive like a spark of energy,</p>
+    <p>a shot of espresso that wakes the world with laughter and life ☕⚡😄</p>
 
-    <p>You have a way of brightening every space you enter 🌟🏡</p>
-    <p>as if the day itself smiles a little more ☀️🙂</p>
+    <p>And yet, you stay like sunshine,</p>
+    <p>warm, calming, and endlessly comforting ☀️🤍</p>
 
-    <p>You are like a shot of espresso ☕⚡</p>
-    <p>full of energy 🔥</p>
-    <p>enthusiasm 😄✨</p>
-    <p>and life 💃🌈</p>
+    <p>There is a light in you</p>
+    <p>that makes ordinary days feel special,</p>
+    <p>and simple moments worth remembering ✨🌸</p>
 
-    <p>And at the same time 💫</p>
-    <p>you feel like being bathed in sunshine ☀️🌼</p>
-    <p>warm 🤍</p>
-    <p>comforting 🤗</p>
-    <p>and quietly uplifting 🌤️💖</p>
+    <p>On your birthday, I wish you a life</p>
+    <p>filled with soft mornings 🌅</p>
+    <p>fearless dreams 💫</p>
+    <p>and happiness that finds you again and again 🌷😊</p>
 
-    <p>Your sense of play 🎈😜</p>
-    <p>your fun spirit 🎉✨</p>
-    <p>and your beautiful energy 💃💫</p>
-    <p>make even the simplest moments exciting 🌟🥰</p>
+    <p>May your smile never lose its magic ✨</p>
+    <p>may your heart always feel at home 🤍</p>
+    <p>and may love follow you wherever you go 🕊️💖</p>
 
-    <p>Thank you for being such a beautiful presence 💐💛</p>
-    <p>a light that makes life feel a little more special ✨🌸</p>
-
-    <p>Wishing you peace 🕊️</p>
-    <p>joy 😄🎶</p>
-    <p>love ❤️💖</p>
-    <p>and moments worth holding close 🤍📸</p>
-
-    <p><strong>Happy Birthday, Sonali 🎂💐✨💖</strong></p>
+    <p><strong>Happy Birthday, Sonali 🎂🌸✨</strong></p>
 
   </div>
 </div>
