--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
     <p>may your heart always feel at home 🤍</p>
     <p>and may love follow you wherever you go 🕊️💖</p>
 
-    <p><strong>Happy Birthday, Sonali 🎂🌸✨</strong></p>
+    <div class="birthday-image">
+      <img src="birthday.png" alt="Happy Birthday Sonali" class="img-fluid">
+    </div>
 
   </div>
 </div>
