--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     <p>may your heart always feel at home 🤍</p>
     <p>and may love follow you wherever you go 🕊️💖</p>
 
-    <p>
-      <img src="birthday.png" alt="Happy Birthday Sonali" class="img-fluid">
-    </p>
+<p class="birthday-image">
+  <img src="birthday.png" alt="Happy Birthday Sonali">
+</p>
 
   </div>
 </div>
